--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 		R.&nbsp;G. McKilliam.
   <em>Lattice theory, circular statistics and polynomial phase
   signals</em>.
-  PhD thesis, University of Queensland, Australia, December 2010.<br />
+  PhD thesis, University of Queensland, Australia, December 2010.
 [ <a href="./robby_bib.html#McKilliam2010thesis">bib</a> | <a href="papers/thesis.pdf">pdf</a> | <a href="papers/errata.pdf">errata</a> ] <br>
 	</td>
 	</tr>
@@ -52,7 +52,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
  On the Cram&eacute;r-Rao bound for polynomial phase signals.
- submitted to <em>IEEE Signal Processing Letters</em>, Aug 2012. <br />
+ submitted to <em>IEEE Signal Processing Letters</em>, Aug 2012. 
 [&nbsp;<a href="robby_bib.html#McKilliam_polycrbs_2012">bib</a>&nbsp|&nbsp;<a href="https://github.com/robbymckilliam/polynomialphasecrbs">code</a>&nbsp;]
 </td>
 </tr>
@@ -61,7 +61,7 @@ R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;L. Clarkson.
  On the error performance of the <em>A</em><sub>n</sub> lattices.
-  <em>IEEE Trans. Inform. Theory</em>, 58(9):5941-5949, Sep. 2012.<br />
+  <em>IEEE Trans. Inform. Theory</em>, 58(9):5941-5949, Sep. 2012.
 	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TIT.2012.2199462">doi</a>&nbsp;|&nbsp;<a href="http://arxiv.org/abs/1111.6334">arxiv</a>&nbsp;|&nbsp;<a href="https://github.com/robbymckilliam/An_lattice_error_probability">code</a>&nbsp;]
 </td>
 </tr>
@@ -70,7 +70,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 	<td>
 	R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
  Direction estimation by minimum squared arc length.
- <em>IEEE Trans. Sig. Process.</em>, 60(5):2115-2124, May 2012.<br />
+ <em>IEEE Trans. Sig. Process.</em>, 60(5):2115-2124, May 2012.
 	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TSP.2012.2186444">doi</a>&nbsp;|&nbsp;<a href="http://github.com/robbymckilliam/direction_estimation_by_minimum_squared_arc_length">code</a>&nbsp;]
 	</td>
 	</tr>
@@ -79,7 +79,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 		<td>
 		R.&nbsp;G. McKilliam, Barry&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and Bill Moran.
 		  Frequency estimation by phase unwrapping.
-		  <em>IEEE Trans. Signal Process.</em>, 58(6):2953-2963, June 2010.</br>
+		  <em>IEEE Trans. Signal Process.</em>, 58(6):2953-2963, June 2010.
 		[&nbsp;<a href="./robby_bib.html#McKilliamFrequencyEstimationByPhaseUnwrapping2009">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TSP.2010.2045786">doi</a>&nbsp;|&nbsp;<a href="http://github.com/robbymckilliam/frequency_estimation_by_phase_unwrapping">code</a>&nbsp;]
 		</td>
 	</tr>
@@ -88,7 +88,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 		<td>
 		R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
 		  Linear-time nearest point algorithms for Coxeter lattices.
-		  <em>IEEE Trans. Inform. Theory</em>, 56(3):1015-1022, Mar. 2010.<br />
+		  <em>IEEE Trans. Inform. Theory</em>, 56(3):1015-1022, Mar. 2010.
 		[&nbsp;<a href="./robby_bib.html#McKilliam2009CoxeterLattices">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TIT.2009.2039090">doi</a>&nbsp;|&nbsp;<a href="http://arxiv.org/abs/0903.0673">arxiv</a>&nbsp;]
 		</td>
 	</tr>
@@ -97,7 +97,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 		<td>
 		R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 		Identifiability and aliasing in polynomial-phase signals.
-		<em>IEEE Trans. Signal Process.</em>, 57(11):4554-4557, Nov. 2009.<br />
+		<em>IEEE Trans. Signal Process.</em>, 57(11):4554-4557, Nov. 2009.
 	<!--	<b>Winner:</b> Canon Information Systems Research Australia (CiSRA) best paper prize 2010. <br /> -->
 		[&nbsp;<a href="./robby_bib.html#McKilliam2009IndentifiabliltyAliasingPolyphase">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TSP.2009.2026511">doi</a>&nbsp;]
 		
@@ -108,7 +108,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 		<td>
 		R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
   		An algorithm to compute the nearest point in the lattice <em>A</em><sub>n</sub><sup>*</sup>.
-  		<em>IEEE Trans. Inform. Theory</em>, 54(9):4378-4381, Sep. 2008.<br />
+  		<em>IEEE Trans. Inform. Theory</em>, 54(9):4378-4381, Sep. 2008.
 		[&nbsp;<a href="./robby_bib.html#McKilliam2008">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TIT.2008.928280">doi</a>&nbsp;|&nbsp;<a href="http://arxiv.org/abs/0801.1364">arxiv</a>&nbsp;]
 	</td>
 	</tr>
@@ -124,8 +124,10 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
  Estimating period from sparse, noisy timing data.
- accepted for IEEE Statistical Signal Processing Workshop, Aug 2012. <br />
-[&nbsp;<a href="robby_bib.html#Quinn_sparse_noisy_SSP_2012">bib</a>&nbsp;]
+ In <em>IEEE Statistical Signal Processing Workshop (SSP)</em>, pages
+  193-196, Aug. 2012.
+[&nbsp;<a href="robby_bib.html#Quinn_est_per_SSP_2012">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1109/SSP.2012.6319657">doi</a>&nbsp;]
 </td>
 </tr>
 
@@ -134,7 +136,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 R.&nbsp;G. McKilliam and A.&nbsp;Grant.
  Finding short vectors in a lattice of Voronoi's first kind.
  International Symposium on Information Theory
-  (ISIT), Aprl. 2012. <br />
+  (ISIT), Aprl. 2012. 
 [&nbsp;<a href="robby_bib.html#McKilliam_short_vectors_first_type_isit_2012">bib</a> 
 |&nbsp;<a href="http://arxiv.org/abs/1201.5154">arxiv</a>&nbsp;]
 
@@ -148,7 +150,7 @@ J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilli
  Code-acquisition via the projection method for CDMA systems in high
   MAI channels.
  accepted to the International Conference on Communications (ICC),
-  Jan. 2012. <br />
+  Jan. 2012. 
 [&nbsp;<a href="robby_bib.html#Kodithuwakku_projection_PIC_ICC_2012">bib</a>&nbsp;]
 
 </td>
@@ -159,7 +161,7 @@ J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilli
     <td>
       R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
       Estimating the circular mean from correlated observations.
-      In <em>Defence App. Sig. Proc.</em>, July 2011. <br />
+      In <em>Defence App. Sig. Proc.</em>, July 2011. 
       [&nbsp;<a href="robby_bib.html#McKilliam_direstcro_dasp_2011">bib</a> | 
       <a href="papers/circmeancorr.pdf">pdf</a>&nbsp;]
   </tr>
@@ -179,7 +181,7 @@ J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilli
       R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
       The asymptotic properties of polynomial phase estimation by least
       squares phase unwrapping.
-     <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages 3592-3595, May 2011. <br />
+     <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages 3592-3595, May 2011.
       [&nbsp;<a href="robby_bib.html#McKilliam_polyphase_est_icassp_2011">bib</a> | <a href="http://dx.doi.org/10.1109/ICASSP.2011.5946255">doi</a>&nbsp;]
 
     </td>
@@ -190,7 +192,7 @@ J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilli
     <td>
       R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
       Block noncoherent detection of hexagonal QAM.
-      <em>in Proc. Australian Commun. Theory Workshop</em>, pages 65-70, Feb. 2010.<br />
+      <em>in Proc. Australian Commun. Theory Workshop</em>, pages 65-70, Feb. 2010.
       [&nbsp;<a href="robby_bib.html#McKilliam2010_block_noncoherent_hex">bib</a> | <a href="http://dx.doi.org/10.1109/AUSCTW.2010.5426763">doi</a>&nbsp;]
 
     </td>
@@ -202,7 +204,7 @@ J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilli
  Polynomial-phase estimation, phase unwrapping and the nearest lattice
   point problem.
  <em>Asilomar Conference on Signals, Systems, and Computers</em>, pages
-  493-495, Nov. 2009. <br />
+  493-495, Nov. 2009.
       [ <a href="./robby_bib.html#McKilliam2009asilomar_polyest_lattice">bib</a>&nbsp;| <a href="http://dx.doi.org/10.1109/ACSSC.2009.5469871">doi</a>&nbsp;| <a href="papers/asilomar_polyphase_est.pdf">pdf</a>&nbsp;]	
     </td>
   </tr>
@@ -213,7 +215,7 @@ J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilli
       Collings.
       Linear-time block noncoherent detection of PSK. <em>Proc. Internat. Conf. 
 	Acoust. Speech Signal Process.</em>,
-      pages 2465-2468, April 2009. <br />
+      pages 2465-2468, April 2009.
       [&nbsp;<a href="robby_bib.html#4960121">bib</a>&nbsp;| 
       <a href="http://dx.doi.org/10.1109/ICASSP.2009.4960121">doi</a>&nbsp;]
     </td>
@@ -223,7 +225,7 @@ J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilli
   <tr valign="top">
     <td>R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson. Maximum-likelihood period 
       estimation from sparse, noisy timing data. <em>Proc. Internat. Conf. 
-	Acoust. Speech Signal Process.</em>, pages 3697-3700, March 2008.<br />
+	Acoust. Speech Signal Process.</em>, pages 3697-3700, March 2008.
       [ <a href="robby_bib.html#McKilliam2007">bib</a> |
       <a href="http://dx.doi.org/10.1109/ICASSP.2008.4518455">doi</a>&nbsp;]
       
@@ -233,7 +235,7 @@ J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilli
   <tr valign="top">
     <td>R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings. 
       An improved algorithm for optimal noncoherent QAM detection. <em>Proc. 
-	Austral. Comm. Theory Workshop</em>, pages 64-68, Jan 2008.<br>
+	Austral. Comm. Theory Workshop</em>, pages 64-68, Jan 2008.
       [ <a href="robby_bib.html#McKilliam2008a">bib</a> |
       <a href="http://dx.doi.org/10.1109/AUSCTW.2008.4460823">doi</a> ]
 
@@ -244,7 +246,7 @@ J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilli
 <td>
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W. D. Smith and B.&nbsp;G. Quinn.
   A linear-time nearest point algorithm for the lattice <em>A</em><sub>n</sub><sup>*</sup>. <em>International Symposium on Information Theory
-  and its Applications</em>, 2008.<br />
+  and its Applications</em>, 2008.
 [ <a href="./robby_bib.html#McKilliam2008b">bib</a> |
 <a href="papers/ISITA_Anstar.pdf">pdf</a>&nbsp;]
 
@@ -255,7 +257,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W. D. Smith and B.&nbsp;G. Qu
     <td>
 B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
   Maximizing the periodogram.
-  <em>IEEE GLOBECOM</em>, pages 1-5, Dec 2008.<br />
+  <em>IEEE GLOBECOM</em>, pages 1-5, Dec 2008.
 [ <a href="./robby_bib.html#Quinn2008maximizing_the_periodogram">bib</a> | 
 <a href="http://dx.doi.org/10.1109/GLOCOM.2008.ECP.668">doi</a> ]
 
@@ -266,7 +268,7 @@ B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
 	<tr valign="top">
 		<td>R.&nbsp;McKilliam and G.&nbsp;Wyeth. Fast and robust stereo object recognition 
 		for spheres. <em>Proc. Australasian Conference on Robotics and 
-		Automation</em>, 2006.<br>
+		Automation</em>, 2006.
 		[ <a href="robby_bib.html#McKilliam2006">bib</a> |
 		<a href="http://www.araa.asn.au/acra/acra2006/papers/paper_5_62.pdf">pdf</a>&nbsp;]
 
