--- a/robby.html
+++ b/robby.html
@@ -33,7 +33,22 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn_sparse_noisy_SSP_2012">2</a>]
+[<a name="McKilliam_leastsqPSKpilotsdata_2012">2</a>]
+</td>
+<td class="bibtexitem">
+R.&nbsp;G. McKilliam, Andre Pollok, Bill Cowley, Vaughan Clarkson, and Barry Quinn.
+ Carrier phase and amplitude estimation for phase shift keying using
+  pilots and data.
+ to be submitted to IEEE Transactions on Signal Processing, Aug. 2012.
+[&nbsp;<a href="robby_bib.html#McKilliam_leastsqPSKpilotsdata_2012">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="Quinn_sparse_noisy_SSP_2012">3</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -47,7 +62,23 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_polycrbs_2012">3</a>]
+[<a name="Quinn_est_per_SSP_2012">4</a>]
+</td>
+<td class="bibtexitem">
+B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
+ Estimating period from sparse, noisy timing data.
+ In <em>IEEE Statistical Signal Processing Workshop (SSP)</em>, pages
+  193-196, Aug. 2012.
+[&nbsp;<a href="robby_bib.html#Quinn_est_per_SSP_2012">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1109/SSP.2012.6319657">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="McKilliam_polycrbs_2012">5</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
@@ -61,7 +92,7 @@ R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_LSU_polyest_part1_2012">4</a>]
+[<a name="McKilliam_LSU_polyest_part1_2012">6</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;Vellambi.
@@ -77,7 +108,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Mor
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_LSU_polyest_part2_2012">5</a>]
+[<a name="McKilliam_LSU_polyest_part2_2012">7</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;Vellambi.
@@ -93,7 +124,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Mor
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_short_vectors_first_type_isit_2012">6</a>]
+[<a name="McKilliam_short_vectors_first_type_isit_2012">8</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Grant.
@@ -108,7 +139,7 @@ R.&nbsp;G. McKilliam and A.&nbsp;Grant.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Kodithuwakku_projection_PIC_ICC_2012">7</a>]
+[<a name="Kodithuwakku_projection_PIC_ICC_2012">9</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilliam.
@@ -124,7 +155,7 @@ J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilli
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_error_prob_An2012">8</a>]
+[<a name="McKilliam_error_prob_An2012">10</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, and E.&nbsp;Viterbo I. V.&nbsp;L. Clarkson.
@@ -139,21 +170,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, and E.&nbsp;Viterbo I. V.&nbsp;L. Cla
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn_snpe_dasp_2011">9</a>]
-</td>
-<td class="bibtexitem">
-B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
- Estimating period from sparse, noisy timing data.
- In <em>Defence App. Sig. Proc.</em>, July 2011.
-[&nbsp;<a href="robby_bib.html#Quinn_snpe_dasp_2011">bib</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="McKilliam_direstcro_dasp_2011">10</a>]
+[<a name="McKilliam_direstcro_dasp_2011">11</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
@@ -167,7 +184,7 @@ R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_polyphase_est_icassp_2011">11</a>]
+[<a name="McKilliam_polyphase_est_icassp_2011">12</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -184,7 +201,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2007">12</a>]
+[<a name="McKilliam2007">13</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -200,7 +217,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamLinearTimeBlockPSK2009">13</a>]
+[<a name="McKilliamLinearTimeBlockPSK2009">14</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B. Collings.
@@ -220,7 +237,7 @@ We propose a new algorithm for noncoherent sequence detection of M-ary phase-shi
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">14</a>]
+[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">15</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -235,7 +252,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009asilomar_polyest_lattice">15</a>]
+[<a name="McKilliam2009asilomar_polyest_lattice">16</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp;Moran.
@@ -251,7 +268,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010_block_noncoherent_hex">16</a>]
+[<a name="McKilliam2010_block_noncoherent_hex">17</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -266,7 +283,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2006">17</a>]
+[<a name="McKilliam2006">18</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
@@ -281,7 +298,7 @@ R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008">18</a>]
+[<a name="McKilliam2008">19</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -297,7 +314,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008b">19</a>]
+[<a name="McKilliam2008b">20</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp;G. Quinn.
@@ -313,7 +330,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008a">20</a>]
+[<a name="McKilliam2008a">21</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -330,7 +347,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009CoxeterLattices">21</a>]
+[<a name="McKilliam2009CoxeterLattices">22</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -348,7 +365,7 @@ R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010thesis">22</a>]
+[<a name="McKilliam2010thesis">23</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam.
@@ -363,7 +380,7 @@ R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">23</a>]
+[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">24</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -384,7 +401,7 @@ Keywords: Central limit theorem, frequency estimation, lattices, nearest lattice
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn2008maximizing_the_periodogram">24</a>]
+[<a name="Quinn2008maximizing_the_periodogram">25</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
