--- a/robby_bib.html
+++ b/robby_bib.html
@@ -29,6 +29,16 @@
 }
 </pre>
 
+<a name="McKilliam_leastsqPSKpilotsdata_2012"></a><pre>
+@unpublished{<a href="robby.html#McKilliam_leastsqPSKpilotsdata_2012">McKilliam_leastsqPSKpilotsdata_2012</a>,
+  author = {R. G. McKilliam and Andre Pollok and Bill Cowley and Vaughan Clarkson and Barry Quinn},
+  title = {Carrier phase and amplitude estimation for phase shift keying using pilots and data},
+  note = {to be submitted to IEEE Transactions on Signal Processing},
+  year = 2012,
+  month = {Aug.}
+}
+</pre>
+
 <a name="Quinn_sparse_noisy_SSP_2012"></a><pre>
 @unpublished{<a href="robby.html#Quinn_sparse_noisy_SSP_2012">Quinn_sparse_noisy_SSP_2012</a>,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
@@ -36,6 +46,18 @@
   note = {accepted for {IEEE Statistical Signal Processing Workshop}},
   year = 2012,
   month = {Aug}
+}
+</pre>
+
+<a name="Quinn_est_per_SSP_2012"></a><pre>
+@inproceedings{<a href="robby.html#Quinn_est_per_SSP_2012">Quinn_est_per_SSP_2012</a>,
+  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
+  booktitle = {IEEE Statistical Signal Processing Workshop (SSP)},
+  title = {Estimating period from sparse, noisy timing data},
+  year = 2012,
+  month = {Aug.},
+  pages = {193-196},
+  doi = {10.1109/SSP.2012.6319657}
 }
 </pre>
 
@@ -101,16 +123,6 @@
   pages = {5941-5949},
   doi = {10.1109/TIT.2012.2199462},
   issn = {0018-9448}
-}
-</pre>
-
-<a name="Quinn_snpe_dasp_2011"></a><pre>
-@inproceedings{<a href="robby.html#Quinn_snpe_dasp_2011">Quinn_snpe_dasp_2011</a>,
-  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
-  title = {Estimating period from sparse, noisy timing data},
-  year = 2011,
-  booktitle = {Defence App. Sig. Proc.},
-  month = {July}
 }
 </pre>
 
