--- a/index.html
+++ b/index.html
@@ -287,9 +287,8 @@ B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
 <b>Software</b>
 <table cellpadding="4" cellspacing="0" width="600">
 <tr valign="top"><td>
-Software for running simulations related to the papers above (and more!) is available on 
-<a href="https://github.com/robbymckilliam/pubsim">github</a>. This software is released under the
-<a href="http://matt.might.net/articles/crapl/">CRAPL</a> and comes with no guarantee as to legibility, coding style or anything else.
+Next to many of the papers listed above is a link named `code'.  This links to a repository containing the latex file and the software used for running simulations and generating plots relevant to that paper.  All of the software is released under the
+<a href="http://matt.might.net/articles/crapl/">CRAPL</a> and comes with no guarantee as to legibility, coding style or anything else.  Much of the code is Java, some Mathematica, some Python. Recently I have been using <a href="http://www.scala-lang.org/">Scala</a>.  If you would prefer MATLAB code please click <a href="http://abandonmatlab.wordpress.com/">here</a>. 
 </td></tr>
 </table>
 
