--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!-- MSTableType="layout" -->
 	<tr>
 		<td valign="top" width="380"><span class="nfakPe">
-Robby McKilliam is at the Institute for Telecommunications Research at the University of South Australia, Adelaide.  His fields of interest are lattice theory, number theory, estimation theory and signal processing and communications.  In December 2010 he completed his PhD at the University of Queensland, Brisbane, Australia. In 2006 he completed his undergraduate studies in computer systems engineering and mathematics at the University of Queensland. Robby's recreational interests are: swimming, skiing, math, motorbikes, videogames, wine, beer and coffee.
+Robby McKilliam is at the Institute for Telecommunications Research at the University of South Australia, Adelaide.  His fields of interest are lattice theory, estimation theory, statistical signal processing and communications.  In December 2010 he completed his PhD at the University of Queensland, Brisbane, Australia. In 2006 he completed his undergraduate studies in computer systems engineering and mathematics at the University of Queensland. Robby's recreational interests are: swimming, skiing, math, motorbikes, rock climbing, videogames, wine, beer and coffee.
 		<!--<p> <a href="cv.pdf">A copy of my current cv is here.</a> </p> -->
 		<p> <b>Address</b>
 		<br> Institute for Telecommunications Research
