added some teaching information

--- a/index.html
+++ b/index.html
@@ -291,6 +291,14 @@ Next to many of the papers listed above is a link named `code'.  This links to a
 </td></tr>
 </table>
 
+
+<br>
+<b>Teaching</b>
+<table cellpadding="4" cellspacing="0" width="600">
+<tr valign="top"><td> Modern Communication Systems (EEET 4036). University of South Australia. 2012. </td></tr>
+<tr valign="top"><td> Digital Communications (COMS 4100). University of Queensland. 2010. </td></tr>
+</table>
+
 <!--
 <br>
 <b>Colleagues</b>
