--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 <td>
 R.&nbsp;G. McKilliam and A.&nbsp;Grant.
  Finding short vectors in a lattice of Voronoi's first kind.
- International Symposium on Information Theory
-  (ISIT), Aprl. 2012. 
+ In <em>IEEE International Symposium on Information Theory
+  Proceedings (ISIT)</em>, pages 2157-2160, July 2012.
 [&nbsp;<a href="robby_bib.html#McKilliam_short_vectors_first_type_isit_2012">bib</a> 
 |&nbsp;<a href="http://arxiv.org/abs/1201.5154">arxiv</a>&nbsp;]
 
