--- a/robby.html
+++ b/robby.html
@@ -53,23 +53,9 @@ R.&nbsp;G. McKilliam, Andre Pollok, Bill Cowley, Vaughan Clarkson, and Barry Qui
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
  Estimating period from sparse, noisy timing data.
- accepted for IEEE Statistical Signal Processing Workshop, Aug 2012.
-[&nbsp;<a href="robby_bib.html#Quinn_sparse_noisy_SSP_2012">bib</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="Quinn_est_per_SSP_2012">4</a>]
-</td>
-<td class="bibtexitem">
-B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
- Estimating period from sparse, noisy timing data.
  In <em>IEEE Statistical Signal Processing Workshop (SSP)</em>, pages
   193-196, Aug. 2012.
-[&nbsp;<a href="robby_bib.html#Quinn_est_per_SSP_2012">bib</a>&nbsp;| 
+[&nbsp;<a href="robby_bib.html#Quinn_sparse_noisy_SSP_2012">bib</a>&nbsp;| 
 <a href="http://dx.doi.org/10.1109/SSP.2012.6319657">DOI</a>&nbsp;]
 
 </td>
@@ -78,7 +64,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_polycrbs_2012">5</a>]
+[<a name="McKilliam_polycrbs_2012">4</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
@@ -92,7 +78,7 @@ R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_LSU_polyest_part1_2012">6</a>]
+[<a name="McKilliam_LSU_polyest_part1_2012">5</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;Vellambi.
@@ -108,7 +94,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Mor
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_LSU_polyest_part2_2012">7</a>]
+[<a name="McKilliam_LSU_polyest_part2_2012">6</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;Vellambi.
@@ -124,14 +110,18 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Mor
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_short_vectors_first_type_isit_2012">8</a>]
+[<a name="McKilliam_short_vectors_first_type_isit_2012">7</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Grant.
  Finding short vectors in a lattice of Voronoi's first kind.
- <em>International Symposium on Information Theory (ISIT)</em>, July
-  2012.
-[&nbsp;<a href="robby_bib.html#McKilliam_short_vectors_first_type_isit_2012">bib</a>&nbsp;]
+ In <em>IEEE International Symposium on Information Theory
+  Proceedings (ISIT)</em>, pages 2157-2160, July 2012.
+[&nbsp;<a href="robby_bib.html#McKilliam_short_vectors_first_type_isit_2012">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1109/ISIT.2012.6283833">DOI</a>&nbsp;]
+<blockquote><font size="-1">
+Keywords: Voronoi first kind lattices;n-dimensional lattice;obtuse superbasis;polynomial time;short vector finding;shortest nonzero Euclidean length;weighted graph;computational complexity;computational geometry;graph theory;lattice theory;vectors;
+</font></blockquote>
 
 </td>
 </tr>
@@ -139,7 +129,7 @@ R.&nbsp;G. McKilliam and A.&nbsp;Grant.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Kodithuwakku_projection_PIC_ICC_2012">9</a>]
+[<a name="Kodithuwakku_projection_PIC_ICC_2012">8</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilliam.
@@ -155,7 +145,7 @@ J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilli
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_error_prob_An2012">10</a>]
+[<a name="McKilliam_error_prob_An2012">9</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, and E.&nbsp;Viterbo I. V.&nbsp;L. Clarkson.
@@ -170,7 +160,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, and E.&nbsp;Viterbo I. V.&nbsp;L. Cla
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_direstcro_dasp_2011">11</a>]
+[<a name="McKilliam_direstcro_dasp_2011">10</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
@@ -184,7 +174,7 @@ R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_polyphase_est_icassp_2011">12</a>]
+[<a name="McKilliam_polyphase_est_icassp_2011">11</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -201,7 +191,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2007">13</a>]
+[<a name="McKilliam2007">12</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -217,7 +207,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamLinearTimeBlockPSK2009">14</a>]
+[<a name="McKilliamLinearTimeBlockPSK2009">13</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B. Collings.
@@ -237,7 +227,7 @@ We propose a new algorithm for noncoherent sequence detection of M-ary phase-shi
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">15</a>]
+[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">14</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -252,7 +242,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009asilomar_polyest_lattice">16</a>]
+[<a name="McKilliam2009asilomar_polyest_lattice">15</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp;Moran.
@@ -268,7 +258,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010_block_noncoherent_hex">17</a>]
+[<a name="McKilliam2010_block_noncoherent_hex">16</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -283,7 +273,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2006">18</a>]
+[<a name="McKilliam2006">17</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
@@ -298,7 +288,7 @@ R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008">19</a>]
+[<a name="McKilliam2008">18</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -314,7 +304,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008b">20</a>]
+[<a name="McKilliam2008b">19</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp;G. Quinn.
@@ -330,7 +320,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008a">21</a>]
+[<a name="McKilliam2008a">20</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -347,7 +337,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009CoxeterLattices">22</a>]
+[<a name="McKilliam2009CoxeterLattices">21</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -365,7 +355,7 @@ R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010thesis">23</a>]
+[<a name="McKilliam2010thesis">22</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam.
@@ -380,7 +370,7 @@ R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">24</a>]
+[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">23</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -401,7 +391,7 @@ Keywords: Central limit theorem, frequency estimation, lattices, nearest lattice
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn2008maximizing_the_periodogram">25</a>]
+[<a name="Quinn2008maximizing_the_periodogram">24</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
