--- a/robby_bib.html
+++ b/robby_bib.html
@@ -40,17 +40,7 @@
 </pre>
 
 <a name="Quinn_sparse_noisy_SSP_2012"></a><pre>
-@unpublished{<a href="robby.html#Quinn_sparse_noisy_SSP_2012">Quinn_sparse_noisy_SSP_2012</a>,
-  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
-  title = {Estimating Period From Sparse, Noisy Timing Data},
-  note = {accepted for {IEEE Statistical Signal Processing Workshop}},
-  year = 2012,
-  month = {Aug}
-}
-</pre>
-
-<a name="Quinn_est_per_SSP_2012"></a><pre>
-@inproceedings{<a href="robby.html#Quinn_est_per_SSP_2012">Quinn_est_per_SSP_2012</a>,
+@inproceedings{<a href="robby.html#Quinn_sparse_noisy_SSP_2012">Quinn_sparse_noisy_SSP_2012</a>,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
   booktitle = {IEEE Statistical Signal Processing Workshop (SSP)},
   title = {Estimating period from sparse, noisy timing data},
@@ -92,12 +82,16 @@
 </pre>
 
 <a name="McKilliam_short_vectors_first_type_isit_2012"></a><pre>
-@article{<a href="robby.html#McKilliam_short_vectors_first_type_isit_2012">McKilliam_short_vectors_first_type_isit_2012</a>,
+@inproceedings{<a href="robby.html#McKilliam_short_vectors_first_type_isit_2012">McKilliam_short_vectors_first_type_isit_2012</a>,
   author = {R. G. McKilliam and A. Grant},
+  booktitle = {IEEE International Symposium on Information Theory Proceedings (ISIT)},
   title = {Finding short vectors in a lattice of {Voronoi's} first kind},
-  journal = {International Symposium on Information Theory (ISIT)},
   year = 2012,
-  month = {July}
+  month = {July},
+  pages = {2157-2160},
+  keywords = {Voronoi first kind lattices;n-dimensional lattice;obtuse superbasis;polynomial time;short vector finding;shortest nonzero Euclidean length;weighted graph;computational complexity;computational geometry;graph theory;lattice theory;vectors;},
+  doi = {10.1109/ISIT.2012.6283833},
+  issn = {2157-8095}
 }
 </pre>
 
